# LOCAL_SEO

./: .env.example  .env.local  .gitignore  .rules  DEPLOYMENT_GUIDE.md  DEPLOY_GCP.md  Dockerfile  Makefile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.windsurf/: business_logic.md  free_audit_technical_spec.md  user_journey.md
alembic/: env.py
app/: __init__.py  main.py  scheduler_runtime.py  worker.py
docs/: 2026-04-15_MASTER_COMMERCIALIZATION_GUIDE_KR.broken-encoding.bak  2026-04-15_MASTER_COMMERCIALIZATION_GUIDE_KR.md  AARRR_SWOT_ANALYSIS.md  AARRR_UPDATE_2026.md  AI_FEATURES_GUIDE.md  AI_FEATURES_GUIDE_KR.md  AI_FEATURES_IMPLEMENTATION_COMPLETE.md  AI_FEATURES_INDEX.md  ARCHIVE_RECLASSIFICATION_REVIEW_KR_2026-03-06.md  BILLING_SUPPORT_INCIDENT_RUNBOOK_KR_2026-05-18.md  CODEBASE_ANALYSIS_KR_2026-03-06.md  CODE_IMPROVEMENT_CHECKLIST_KR_2026-03-06.md  COMMERCIALIZATION_BREAKEVEN_SIMULATION_KR_2026-03-27.md  COMMERCIALIZATION_IMPROVEMENTS_KR_2026-05-02.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_RISK_ASSESSMENT_KR_2026-03-06.md  DOCUMENT_INDEX_KR_2026-03-06.md  ENGLISH_OPS_DOC_GAP_AUDIT_KR_2026-03-06.md  EXECUTION_PRIORITY_ROADMAP_KR_2026-03-06.md  FEATURE_MATRIX.md  GCP_BOOTSTRAP_CHECKLIST_KR_2026-04-01.md  IMPLEMENTATION_SUMMARY_AI_FEATURES.md  IMPLEMENTATION_SUMMARY_KR.md  MONETIZATION_BLUEPRINT.md  MONETIZATION_READINESS_AUDIT_v2.md  MONETIZATION_SUMMARY.md  OPERATIONS_RUNBOOK_KR_2026-03-06.md  PARTIAL_FEATURE_STABILIZATION_PLAN_KR_2026-03-06.md  PILOT_OPERATIONS_METRICS_KR_2026-05-18.md  PROD_LAUNCH_CHECKLIST_KR_2026-03-28.md  (+15 more)
(+399 files in other folders)
